// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defining blocks is possible to define inline field types 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "foo",
      "resolve": [Function],
      "type": "B",
    },
  ],
  "name": "A",
}
`;

exports[`defining blocks is possible to define scalar fields 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "boolean",
      "resolve": [Function],
      "type": "Boolean",
    },
    Object {
      "name": "string",
      "resolve": [Function],
      "type": "String",
    },
    Object {
      "name": "id",
      "resolve": [Function],
      "type": "ID",
    },
    Object {
      "name": "int",
      "resolve": [Function],
      "type": "Int",
    },
    Object {
      "name": "float",
      "resolve": [Function],
      "type": "Float",
    },
  ],
  "name": "Foo",
}
`;

exports[`defining blocks is possible to use shorthand for scalars 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "boolean",
      "resolve": [Function],
      "type": "Boolean",
    },
    Object {
      "name": "string",
      "resolve": [Function],
      "type": "String",
    },
    Object {
      "name": "id",
      "resolve": [Function],
      "type": "ID",
    },
    Object {
      "name": "int",
      "resolve": [Function],
      "type": "Int",
    },
    Object {
      "name": "float",
      "resolve": [Function],
      "type": "Int",
    },
  ],
  "name": "Foo",
}
`;

exports[`defining schemas is possible to for field types to reference-by-string 1`] = `
"type A {
  foo: B
}

type B {
  bar: String
}
"
`;
